<resources>
    <string name="app_name">Art Zone App</string>
    <string name="landingpage_title">Welcome to Art Zone</string>
    <string name="landingpage_description">Discover great artworks by new artists. Enjoy yourself and inspire newbies to create more artwork. If you are new here click on the Get start button to learn about the app. </string>
    <string name="landingpage_btnname">Get Started</string>
    <string name="landingpage_loginlink">Already have an account? Login</string>
    <string name="home_nav_title">Home</string>
    <string name="list_nav_title">List</string>
    <string name="gallary_nav_title">Gallary</string>
    <string name="profile_nav_title">Profile</string>
    <string name="logout_nav_title">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="upload_cancle">cancle</string>
    <string name="upload_title">Upload Art</string>
    <string name="name">Name</string>
    <string name="upload_title_hint">eg:-forest landscape oil paint</string>
    <string name="upload_description_hint">Tell your story behind this art</string>
    <string name="upload_description_lable">Add description</string>
    <string name="upload_title_lable">Add title</string>
    <string name="upload_btn_text">Upload</string>
    <string name="dsplay_image_demotitle">Boy artist with a smile</string>
    <string name="display_image_demodescription">One day I saw a boy with a beautiful smile. He is a  talented artist. So I took a photo of him that day.  After some time I had this crazy idea to make an  illustration out of that reference.</string>
    <string name="register_artist_btn_text">Artist</string>
    <string name="register_guest_btn_text">Guest</string>
    <string name="edit_art_title">Edit Art</string>
    <string name="edit_btn_text">Edit</string>
    <string name="Artist_name">Jhone Smith</string>
    <string name="Artist_job">Graphic designer</string>
    <string name="upload_image">Upload</string>
    <string name="Login_title1">Let\'s log you in.</string>
    <string name="login_title2">Welcome back.</string>
    <string name="forget_password_text">Forgot Password?</string>
    <string name="signup_change_text">Don\'t have an account?</string>
    <string name="signup_text_btn"> SignUp</string>
    <string name="login_email_hint">Enter your email</string>
    <string name="login_password_hint">Enter the password</string>
    <string name="Login_btn">Login</string>
    <string name="reenter_password_hint">Re-enter the password</string>
    <string name="guestorartist">I\'m a,</string>
    <string name="switch_loging_text">Already have an account?</string>
    <string name="login_text_btn"> Login</string>
    <string name="Register_btn">Register</string>
    <string name="like_text">Likes</string>
    <string name="unlike_text">Unlike</string>
    <string name="comment_text">Comment</string>
    <string name="deletebtn">Delete</string>
    <string name="editbtn">Edit</string>
    <string name="img">img</string>
    <string name="textView1">Colour your life</string>
    <string name="imageButton2">imgbtn2</string>
    <string name="list_creat_title">Enter your list name here</string>
    <string name="imageButton1">imgbtn1</string>
    <string name="Home_title">Welcome to ArtZone</string>
    <string name="home_page_description">Join us and get inspired for your next artwork. We provide the best platform to share your art worldwide. Also, you can find our events by clicking the button below.</string>
</resources>